[package]
name = "rocket_grocery_api"
version = "0.1.0"
authors = ["Josh Wolsborn <wolsborn@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.44"